2009-10-22  Ivan Maidanski <ivmai@mail.ru>

	* allchblk.c (GC_unmap_old, GC_merge_unmapped, GC_allochblk,
	GC_freehblk): Use GC_INNER for the function definition.
	* alloc.c (GC_never_stop_func, GC_should_collect,
	GC_try_to_collect_inner, GC_collect_a_little_inner,
	GC_set_fl_marks, GC_add_to_our_memory, GC_add_to_heap,
	GC_expand_hp_inner, GC_collect_or_expand, GC_allocobj): Ditto.
	* backgraph.c (GC_build_back_graph, GC_traverse_back_graph):
	Ditto.
	* blacklst.c (GC_default_print_heap_obj_proc, GC_bl_init,
	GC_promote_black_lists, GC_unpromote_black_lists,
	GC_add_to_black_list_normal, GC_add_to_black_list_stack,
	GC_is_black_listed): Ditto.
	* darwin_stop_world.c (GC_push_all_stacks, GC_push_all_stacks,
	GC_stop_init, GC_stop_world, GC_start_world): Ditto.
	* dbg_mlc.c (GC_has_other_debug_info, GC_store_back_pointer,
	GC_marked_for_finalization, GC_generate_random_backtrace_no_gc,
	GC_store_debug_info, GC_start_debugging,
	GC_debug_generic_malloc_inner,
	GC_debug_generic_malloc_inner_ignore_off_page,
	GC_debug_malloc_uncollectable, GC_debug_free_inner): Ditto.
	* dyn_load.c (GC_register_dynamic_libraries,
	GC_register_main_static_data, GC_init_dyld): Ditto.
	* finalize.c (GC_push_finalizer_structures, GC_finalize,
	GC_notify_or_invoke_finalizers, GC_print_finalization_stats):
	Ditto.
	* gcj_mlc.c (GC_core_gcj_malloc): Ditto.
	* headers.c (GC_find_header, GC_header_cache_miss,
	GC_scratch_alloc, GC_init_headers, GC_install_header,
	GC_install_counts, GC_remove_header, GC_remove_counts,
	GC_next_used_block, GC_prev_block): Ditto.
	* mach_dep.c (GC_with_callee_saves_pushed): Ditto.
	* malloc.c (GC_collect_or_expand, GC_alloc_large,
	GC_generic_malloc_inner, GC_generic_malloc_inner_ignore_off_page,
	GC_core_malloc_atomic, GC_core_malloc, GC_free_inner): Ditto.
	* mallocx.c (GC_generic_malloc_ignore_off_page): Ditto.
	* mark.c (GC_collection_in_progress, GC_clear_hdr_marks,
	GC_set_hdr_marks, GC_set_mark_bit, GC_clear_mark_bit,